--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="chatbot-container">
 
         <div class="chatbot-header">
-            <h2>입시 전문가 Chatbot</h2>
+            <h2>입시 전문 Chatbot</h2>
         </div>
         <div class="chatbot-messages" id="chatbot-messages"></div>
         <div class="chatbot-input">
