--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Chatbot Interface</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
+    <script src="information.js"></script>
 </head>
 <body>
     <div class="chatbot-container">
